legacy/salesforce/objects/WFC27_Packet__c/WFC27_Packet__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><label>WFC27 Packet</label><nameField><displayFormat>PACKET-{000000}</displayFormat><label>Packet Number</label><type>AutoNumber</type></nameField><pluralLabel>WFC27 Packets</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>