legacy/salesforce/objects/WFC27_Packet__c/fields/Error__c.field-meta.xml
<CustomField><fullName>Error__c</fullName><label>Error</label><length>32768</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>