legacy/salesforce/objects/WFC27_Packet__c/fields/Meta_Count__c.field-meta.xml
<CustomField><fullName>Meta_Count__c</fullName><label>Postmeta Count</label><precision>7</precision><scale>0</scale><type>Number</type></CustomField>