legacy/salesforce/objects/WFC27_Packet__c/fields/Payload__c.field-meta.xml
<CustomField><fullName>Payload__c</fullName><label>JSON Payload</label><length>131072</length><type>LongTextArea</type><visibleLines>6</visibleLines></CustomField>