legacy/salesforce/objects/WFC27_Packet__c/fields/Sent_At__c.field-meta.xml
<CustomField><fullName>Sent_At__c</fullName><label>Sent At</label><type>DateTime</type></CustomField>